Release 3.5.16
==============

Changes
-------

- After the embedded R is initialized the SIGINT handler is set to
  Python default handler (instead of a custom handler raising
  :class:`KeyboardInterrupt`).


Release 3.5.15
==============

New features
------------

- Checking C compiling against the R shared library can be skipped with
  the environment variable `RPY2_API_FORCE` set to `True`.

- The rinterface-level class :class:`rpy2.rinterface.SexpExtPtr` now
  also has an robject-level wrapper :class:`rpy2.robjects.ExternalPointer`,
  and a representation for class name-based conversion rules.


Bugs fixed
----------

- Fixed notebook representation of R named arrays or vectors when
  conversion rules might interfere (issue #1047).

- Multi-line in environment variables (issue #1066).

Changes
-------

- Complete drop of support for Python 3.7. It is now removed from
  the build matrix.


Release 3.5.14
==============

Bugs fixed
----------

- Fixed use of named arguments with `ExtractDelegator` (issue #1048).

- `rpy2py` conversion rules in `numpy2ri` could convert R `list` objects into
  :class:`rpy2.containers.rlike.OrdDict` but there were no `py2rpy` rules
  to perform the reverse conversion (issue #944).

- :meth:`rpy2.robjects.vectors.ListVector.from_length` was incorrectly
  calling the conversion rules before returning the :class:`ListVector`.

Changes
-------

- `distutils` was still used in a couple of places. The installation process
   should now be relying only on `setuptools`.

Release 3.5.13
==============

New features
------------

- R is setting a number of environment variables in a wrapper script. Those
  variables were not set by default by rpy2 and this could lead to issues (see issue #1033).
  The variables are now added to `os.environ`.

Bugs fixed
----------

- `python -m rpy2.situation LD_LIBRARY_PATH` could incorrectly truncate the value
  for `LD_LIBRARY_PATH` when the variable `LD_LIBRARY_PATH` is already defined.  

Changes