@@ -1,5 +1,6 @@
 import abc
 from types import SimpleNamespace
+import typing
 from rpy2.robjects.robject import RObjectMixin
 import rpy2.rinterface as rinterface
 from rpy2.rinterface import StrSexpVector
@@ -48,36 +49,58 @@ class RS4(RObjectMixin, rinterface.SexpS4):
 
 
 class ClassRepresentation(RS4):
-    """ Definition of an R S4 class """
-    slots = property(lambda x: [y[0] for y in x.do_slot('slots')],
-                     None, None,
-                     "Slots (attributes) for the class")
+    """Definition of an R S4 class.
 
-    basenames = property(lambda x: [y[0] for y in x.do_slot('contains')],
-                         None, None,
-                         "Parent classes")
+    This can be thought of as the Python "type" (class definition)
+    for an R object with the C-level type S4.
+    """
+
+    @property
+    def slots(self):
+        """Slots (attributes) for the class."""
+        return [y[0] for y in self.do_slot('slots')]
+
+    @property
+    def basenames(self):
+        """Parent classes."""
+        return [y[0] for y in self.do_slot('contains')]
+
     contains = basenames
 
-    isabstract = property(lambda x: x.do_slot('virtual')[0],
-                          None, None,
-                          "Is the class an abstract class ?")
+    @property
+    def isabstract(self):
+        """Is the class an abstract class ?"""
+        return self.do_slot('virtual')[0]
+
     virtual = isabstract
 
-    packagename = property(lambda x: x.do_slot('package')[0],
-                           None, None,
-                           "R package in which the class is defined")
+    @property
+    def packagename(self):
+        """R package in which the class is defined."""
+        return self.do_slot('package')[0]
+
     package = packagename
 
-    classname = property(lambda x: x.do_slot('className')[0],
-                         None, None,
-                         "Name of the R class")
+    @property
+    def classname(self):
+        """Name of the R class."""
+        return self.do_slot('className')[0],
 
 
-def getclassdef(cls_name: str, packagename=rinterface.MissingArg):
+def getclassdef(cls_name: str, packagename: typing.Optional[str] = None):
+    package: typing.Union[rinterface._MissingArgType, StrSexpVector]
+    if packagename is None:
+        package = rinterface.MissingArg
+    else:
+        package = StrSexpVector((packagename, ))
     cls_def = methods_env['getClassDef'](
         StrSexpVector((cls_name,)),
-        package=StrSexpVector((packagename, ))
+        package=package
     )
+    if cls_def is rinterface.NULL:
+        raise ValueError(
+            f'{cls_name} is not a class in the R package {packagename!r}'
+        )
     cls_def = ClassRepresentation(cls_def)
     cls_def.__rname__ = cls_name
     return cls_def
